git branch dropdown alignment linux fix

--- a/styles/brackets-git.less
+++ b/styles/brackets-git.less
@@ -59,7 +59,7 @@
         height: 5px;
         margin-left: 4px;
         position: relative;
-        top: 8px;
+        top: 7px;
     }
 }
 
